--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": ">=5.5",
         "ext-json": "*",
-        "aragorn-yang/aliyun-dysms-php-sdk": "^20170525.1.0",
+        "aragorn-yang/aliyun-dysms-php-sdk": "^8.0",
         "illuminate/support": ">=5.0"
     },
     "minimum-stability": "stable",
